Fixing portrait images being squashed in the post page.

--- a/LabLog/LabLogApi/wwwroot/apps/lablog/css/home.css
+++ b/LabLog/LabLogApi/wwwroot/apps/lablog/css/home.css
@@ -151,6 +151,9 @@
     width:100%;
 }
 
+.llPostPortraitBodyImage {
+}
+
 .llSummaryPostContainer {
     display: table;
     margin-top: 10px;
